traefik_gateway/templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-dashboard-prefix
  namespace: default
spec:
  stripPrefixRegex:
    regex:
      - "^/dashboard"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
spec:
  headers:
    customFrameOptionsValue: "SAMEORIGIN"
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsSeconds: 315360000
    stsIncludeSubdomains: true
    stsPreload: true
